--- a/MP_3/Makefile
+++ b/MP_3/Makefile
@@ -16,12 +16,18 @@ PROTOC = protoc
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
 GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
-all: system-check tsc tsd 
+all: system-check tsc tsd coord sync
 
 tsc: sns.pb.o sns.grpc.pb.o tsc.o
 	$(CXX) $^ $(LDFLAGS) -g -o $@
 
 tsd: sns.pb.o sns.grpc.pb.o tsd.o
+	$(CXX) $^ $(LDFLAGS) -g -o $@
+
+coord: snsCoordinator.pb.o snsCoordinator.grpc.pb.o sns.pb.o sns.grpc.pb.o coord.o
+	$(CXX) $^ $(LDFLAGS) -g -o $@
+
+sync: snsFollowSync.pb.o snsFollowSync.grpc.pb.o sns.pb.o sns.grpc.pb.o sync.o
 	$(CXX) $^ $(LDFLAGS) -g -o $@
 
 .PRECIOUS: %.grpc.pb.cc
@@ -33,7 +39,7 @@ tsd: sns.pb.o sns.grpc.pb.o tsd.o
 	$(PROTOC) -I.:/home/csce438/grpc/third_party/protobuf/src --cpp_out=. $<
 
 clean:
-	rm -f *.txt *.o *.pb.cc *.pb.h tsc tsd
+	rm -f *.txt *.o *.pb.cc *.pb.h tsc tsd coord sync
 
 
 # The following is to test your system and ensure a smoother experience.
