--- a/MP_3/Makefile
+++ b/MP_3/Makefile
@@ -18,7 +18,7 @@ GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
 all: system-check tsc tsd coord sync
 
-tsc: sns.pb.o sns.grpc.pb.o tsc.o
+tsc: sns.pb.o sns.grpc.pb.o snsCoordinator.pb.o snsCoordinator.grpc.pb.o tsc.o
 	$(CXX) $^ $(LDFLAGS) -g -o $@
 
 tsd: sns.pb.o sns.grpc.pb.o snsCoordinator.pb.o snsCoordinator.grpc.pb.o tsd.o
